--- a/basic_tasks/3_link_predict.ipynb
+++ b/basic_tasks/3_link_predict.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using backend: pytorch\n"
+     ]
+    }
+   ],
    "source": [
     "import dgl\n",
     "import torch\n",
@@ -40,9 +48,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph(num_nodes=34, num_edges=156,\n",
+      "      ndata_schemes={'club': Scheme(shape=(), dtype=torch.int64), 'club_onehot': Scheme(shape=(2,), dtype=torch.int64)}\n",
+      "      edata_schemes={})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[ 0.1109, -0.3806, -0.0678,  0.2543,  0.1668],\n",
+       "        [-0.0288,  0.1962, -0.3015,  0.2064, -0.2286],\n",
+       "        [-0.1980,  0.3647, -0.3372,  0.0361,  0.0494],\n",
+       "        [ 0.1756, -0.3168,  0.0885,  0.3429, -0.2662],\n",
+       "        [ 0.1774, -0.0992, -0.3361, -0.1587, -0.0643],\n",
+       "        [ 0.0765, -0.3269,  0.1866,  0.3445, -0.2371],\n",
+       "        [ 0.3721, -0.2371,  0.3237,  0.1079,  0.2938],\n",
+       "        [-0.1780,  0.1366, -0.3895, -0.3129, -0.3241],\n",
+       "        [ 0.0291,  0.3358,  0.3105, -0.2759, -0.0140],\n",
+       "        [-0.3881, -0.0873,  0.0469, -0.1845, -0.3229],\n",
+       "        [ 0.3161,  0.1472, -0.0522, -0.1971, -0.3088],\n",
+       "        [ 0.1233,  0.2242, -0.3862, -0.0483,  0.1087],\n",
+       "        [-0.3375,  0.1181, -0.1253,  0.0048,  0.2517],\n",
+       "        [ 0.1077,  0.3058, -0.3138, -0.0912, -0.1438],\n",
+       "        [-0.0896, -0.1635, -0.1964, -0.1328,  0.2730],\n",
+       "        [-0.0318, -0.2171, -0.2296, -0.2071, -0.3856],\n",
+       "        [-0.3365, -0.1820, -0.3041,  0.1574,  0.2130],\n",
+       "        [ 0.3153,  0.3894, -0.3799, -0.3178,  0.0723],\n",
+       "        [-0.3455,  0.3724,  0.3300,  0.2855, -0.3466],\n",
+       "        [ 0.3253, -0.0364,  0.3860,  0.0924, -0.1332],\n",
+       "        [-0.1077, -0.1560, -0.0711, -0.2487,  0.1155],\n",
+       "        [ 0.0812, -0.3529, -0.0344,  0.0560, -0.1053],\n",
+       "        [ 0.2066, -0.1761,  0.2672, -0.3202,  0.3780],\n",
+       "        [-0.1193, -0.1684,  0.0803, -0.3643,  0.1917],\n",
+       "        [ 0.2032,  0.2544,  0.2170, -0.1557,  0.1705],\n",
+       "        [-0.3540, -0.1670,  0.2118, -0.3586,  0.2367],\n",
+       "        [ 0.0244, -0.3119,  0.2457,  0.3041,  0.1578],\n",
+       "        [ 0.1590, -0.2662,  0.3746,  0.0992,  0.0518],\n",
+       "        [ 0.1959,  0.0154, -0.0566, -0.2564, -0.0371],\n",
+       "        [ 0.2737, -0.2183,  0.3793, -0.0550, -0.1101],\n",
+       "        [ 0.2994, -0.2567, -0.2254,  0.2557, -0.2298],\n",
+       "        [ 0.1087,  0.3165, -0.1159, -0.2099, -0.0590],\n",
+       "        [ 0.1263,  0.1695,  0.3083, -0.3618, -0.2927],\n",
+       "        [-0.2619, -0.2925, -0.2357,  0.0549,  0.3885]], requires_grad=True)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from tutorial_utils import load_zachery\n",
     "\n",
@@ -72,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
