--- a/large_graphs/large_graphs.ipynb
+++ b/large_graphs/large_graphs.ipynb
@@ -31,9 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using backend: pytorch\n"
+     ]
+    }
+   ],
    "source": [
     "import dgl\n",
     "import dgl.function as fn\n",
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,9 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|V|=12, |E|=4\n",
+      "0 4\n",
+      "7 4\n",
+      "0 6\n",
+      "2 6\n"
+     ]
+    }
+   ],
    "source": [
     "sampled_node_batch = torch.LongTensor([4, 6])   # These are the nodes whose outputs are to be computed\n",
     "sampled_graph = dgl.sampling.sample_neighbors(example_graph, sampled_node_batch, 2)\n",
@@ -119,9 +139,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#source: 5\n",
+      "Node ID of source nodes in original graph: tensor([4, 6, 0, 7, 2])\n",
+      "#destination: 2\n",
+      "Node ID of destination nodes in original graph: tensor([4, 6])\n",
+      "edges in local node Ids\n",
+      "2 0\n",
+      "3 0\n",
+      "2 1\n",
+      "4 1\n",
+      "edges in the original node Ids\n",
+      "0 4\n",
+      "7 4\n",
+      "0 6\n",
+      "2 6\n"
+     ]
+    }
+   ],
    "source": [
     "sampled_block = dgl.to_block(sampled_graph, sampled_node_batch)\n",
     "\n",
@@ -165,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,9 +239,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#blocks: 2\n",
+      "Block for first layer\n",
+      "---------------------\n",
+      "#source: 8\n",
+      "Node ID of source nodes in original graph: tensor([4, 6, 7, 2, 0, 1, 3, 9])\n",
+      "#destination: 5\n",
+      "Node ID of destination nodes in original graph: tensor([4, 6, 7, 2, 0])\n",
+      "edges in local node Ids\n",
+      "2 0\n",
+      "3 0\n",
+      "4 1\n",
+      "3 1\n",
+      "4 2\n",
+      "0 2\n",
+      "5 3\n",
+      "6 3\n",
+      "3 4\n",
+      "7 4\n",
+      "edges in the original node Ids\n",
+      "7 4\n",
+      "2 4\n",
+      "0 6\n",
+      "2 6\n",
+      "0 7\n",
+      "4 7\n",
+      "1 2\n",
+      "3 2\n",
+      "2 0\n",
+      "9 0\n",
+      "\n",
+      "Block for second layer\n",
+      "----------------------\n",
+      "#source: 5\n",
+      "Node ID of source nodes in original graph: tensor([4, 6, 7, 2, 0])\n",
+      "#destination: 2\n",
+      "Node ID of destination nodes in original graph: tensor([4, 6])\n",
+      "edges in local node Ids\n",
+      "2 0\n",
+      "3 0\n",
+      "4 1\n",
+      "3 1\n",
+      "edges in the original node Ids\n",
+      "7 4\n",
+      "2 4\n",
+      "0 6\n",
+      "2 6\n"
+     ]
+    }
+   ],
    "source": [
     "block_sampler = NeighborSampler(example_graph, [2, 2])\n",
     "sampled_blocks = block_sampler.sample(sampled_node_batch)\n",
@@ -228,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,9 +420,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished data loading and preprocessing.\n",
+      "  NumNodes: 19717\n",
+      "  NumEdges: 88651\n",
+      "  NumFeats: 500\n",
+      "  NumClasses: 3\n",
+      "  NumTrainingSamples: 60\n",
+      "  NumValidationSamples: 500\n",
+      "  NumTestSamples: 1000\n"
+     ]
+    }
+   ],
    "source": [
     "import dgl.data\n",
     "\n",
@@ -356,13 +465,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "DGLError",
+     "evalue": "[09:47:23] /opt/dgl/include/dgl/./runtime/ndarray.h:465: Check failed: strm->Read(&header): Invalid DLTensor file format\nStack trace:\n  [bt] (0) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(dmlc::LogMessageFatal::~LogMessageFatal()+0x22) [0x7f12d886fdc2]\n  [bt] (1) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(dgl::runtime::NDArray::Load(dmlc::Stream*)+0x82) [0x7f12d8edd2e2]\n  [bt] (2) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(dgl::serialize::GraphDataObject::Load(dmlc::Stream*)+0x3a) [0x7f12d8ed9fea]\n  [bt] (3) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(dgl::serialize::LoadDGLGraphs(std::string const&, std::vector<unsigned long, std::allocator<unsigned long> >, bool)+0xd14) [0x7f12d8edb334]\n  [bt] (4) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(+0x829b2b) [0x7f12d8edbb2b]\n  [bt] (5) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(DGLFuncCall+0x52) [0x7f12d8e76122]\n  [bt] (6) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/_ffi/_cy3/core.cpython-37m-x86_64-linux-gnu.so(+0x19c5b) [0x7f12d84a7c5b]\n  [bt] (7) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/_ffi/_cy3/core.cpython-37m-x86_64-linux-gnu.so(+0x1a1db) [0x7f12d84a81db]\n  [bt] (8) /home/kingmbc/anaconda3/envs/DynamicGNN/bin/python(_PyObject_FastCallKeywords+0x48b) [0x55d49118b18b]\n\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mDGLError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-93081888cc9a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mogb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodeproppred\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDglNodePropPredDataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDglNodePropPredDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ogbn-products'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msplitted_idx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_idx_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/ogb/nodeproppred/dataset_dgl.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, root)\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDglNodePropPredDataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpre_process\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mpre_process\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/ogb/nodeproppred/dataset_dgl.py\u001b[0m in \u001b[0;36mpre_process\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_hetero\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_graphs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpre_processed_file_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabel_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'labels'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/data/graph_serialize.py\u001b[0m in \u001b[0;36mload_graphs\u001b[0;34m(filename, idx_list)\u001b[0m\n\u001b[1;32m    139\u001b[0m         \u001b[0midx_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 141\u001b[0;31m     \u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_CAPI_DGLLoadGraphs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    142\u001b[0m     \u001b[0mlabel_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmetadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mdgl/_ffi/_cython/./function.pxi\u001b[0m in \u001b[0;36mdgl._ffi._cy3.core.FunctionBase.__call__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mdgl/_ffi/_cython/./function.pxi\u001b[0m in \u001b[0;36mdgl._ffi._cy3.core.FuncCall\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mdgl/_ffi/_cython/./function.pxi\u001b[0m in \u001b[0;36mdgl._ffi._cy3.core.FuncCall3\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mdgl/_ffi/_cython/./base.pxi\u001b[0m in \u001b[0;36mdgl._ffi._cy3.core.CALL\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mDGLError\u001b[0m: [09:47:23] /opt/dgl/include/dgl/./runtime/ndarray.h:465: Check failed: strm->Read(&header): Invalid DLTensor file format\nStack trace:\n  [bt] (0) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(dmlc::LogMessageFatal::~LogMessageFatal()+0x22) [0x7f12d886fdc2]\n  [bt] (1) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(dgl::runtime::NDArray::Load(dmlc::Stream*)+0x82) [0x7f12d8edd2e2]\n  [bt] (2) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(dgl::serialize::GraphDataObject::Load(dmlc::Stream*)+0x3a) [0x7f12d8ed9fea]\n  [bt] (3) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(dgl::serialize::LoadDGLGraphs(std::string const&, std::vector<unsigned long, std::allocator<unsigned long> >, bool)+0xd14) [0x7f12d8edb334]\n  [bt] (4) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(+0x829b2b) [0x7f12d8edbb2b]\n  [bt] (5) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/libdgl.so(DGLFuncCall+0x52) [0x7f12d8e76122]\n  [bt] (6) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/_ffi/_cy3/core.cpython-37m-x86_64-linux-gnu.so(+0x19c5b) [0x7f12d84a7c5b]\n  [bt] (7) /home/kingmbc/anaconda3/envs/DynamicGNN/lib/python3.7/site-packages/dgl/_ffi/_cy3/core.cpython-37m-x86_64-linux-gnu.so(+0x1a1db) [0x7f12d84a81db]\n  [bt] (8) /home/kingmbc/anaconda3/envs/DynamicGNN/bin/python(_PyObject_FastCallKeywords+0x48b) [0x55d49118b18b]\n\n"
+     ]
+    }
+   ],
    "source": [
     "from ogb.nodeproppred import DglNodePropPredDataset\n",
     "\n",
     "data = DglNodePropPredDataset(name='ogbn-products')\n",
+    "\n",
     "splitted_idx = data.get_idx_split()\n",
     "graph, labels = data[0]\n",
     "labels = labels[:, 0]\n",
@@ -470,9 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "NUM_EPOCHS = 200\n",
